<resources>
    <string name="app_name">FunWithFlagsMvp</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Liczba możliwości</string>
    <string name="number_of_choices_description">Wyświetla 2, 4, 6 lub 8 możliwości</string>
    <string name="world_regions">Obszary</string>
    <string name="world_regions_description">Obszary, których dotyczy quiz</string>
    <string name="guess_country">Jaki to kraj?</string>
    <string name="results">%1$d odpowiedzi, %2$.02f%% poprawnych</string>
    <string name="incorrect_answer">Błąd!</string>
    <string name="default_region_message">Musisz wybrać przynajmniej jeden obszar. Jako domyślny obszar wybrano Amerykę Północną.</string>
    <string name="restatring_quiz">Quiz zostanie uruchomiony ponownie z nowymi ustawieniami.</string>
    <string name="question">Pytanie %1$d z %2$d</string>
    <string name="reset_quiz">Resetuj quiz</string>
    <string name="image_description">Obraz bieżącej flagi</string>
    <string name="default_region">North_America</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="summary">Podsumowanie</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
