<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kotwicka.funwithflagsmvp.view.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/quiz_element_bottom_margin"
        android:gravity="center_horizontal"
        android:text="@string/question"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/flagImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="@dimen/quiz_element_bottom_margin"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/guessCountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/guess_country"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:id="@+id/row1LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/firstAnswerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/secondAnswerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/thirdAnswerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/fourthAnswerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/fifthAnswerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/sixthAnswerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/seventhAnswerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color" />

        <Button
            style="@android:style/Widget.Material.Button.Colored"
            android:id="@+id/eightAnswerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/answer_size"
        android:textStyle="bold" />
</LinearLayout>
